--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New Tab</title>
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script><!-- load angular -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.min.js"></script><!-- load angular -->
+    <script src="js/angular/angular.min.js"></script>
+    <script src="js/angular-route/angular-route.min.js"></script>
+    <script src="js/angular-gridster/angular-gridster.js"></script>
     <script src="dashboard.js"></script>
 
 </head>
