--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New Tab</title>
 
-    <link rel="stylesheet" href="js/angular-gridster/dist/angular-gridster.min.css"/>
-    <script src="js/angular-gridster/src/angular-gridster.js"></script>
-    <script src="js/angular/angular.min.js"></script>
-    <script src="js/angular-route/angular-route.min.js"></script>
-    <script src="js/angular-gridster/dist/angular-gridster.min.js"></script>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="assets/angular-gridster/dist/angular-gridster.min.css"/>
+    <script src="assets/angular/angular.min.js"></script>
+    <script src="assets/angular-gridster/src/angular-gridster.js"></script>
+    <script src="assets/angular-route/angular-route.min.js"></script>
+    <script src="assets/angular-gridster/dist/angular-gridster.min.js"></script>
     <script src="dashboard.js"></script>
 
 </head>
@@ -18,7 +19,7 @@
   <ul>
     <li gridster-item="item" ng-repeat="item in standardItems">
       <a href="http://www.cnn.com"> 
-      <img src="img/CNN.png" alt="widget" style="width:100%;height:100%">
+      <img src="icons/CNN.png" alt="widget" style="width:100%;height:100%">
     </li>
   </ul>
 </div>
