--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body ng-controller="dashboardController">
  <div gridster>
   <ul>
-    <li gridster-item="item" ng-repeat="item in standardItems">
+    <li gridster-item="item" ng-repeat="widget in widgets">
       <a href="http://www.cnn.com"> 
       <img src="icons/CNN.png" alt="widget" style="width:100%;height:100%">
     </li>
