--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
  <div gridster>
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
-      <a href="http://www.cnn.com"> 
+      <!-- <a href="http://www.cnn.com"> --> 
       <img src="icons/CNN.png" alt="widget" style="width:100%;height:100%">
     </li>
   </ul>
