fix row horizontal scaling issue

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body ng-controller="dashboardController">
- <div gridster>
+ <div gridster="gridsterOpts">
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
       <!-- <a href="http://www.cnn.com"> --> 
