--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script src="assets/angular-route/angular-route.min.js"></script>
     <script src="assets/angular-gridster/dist/angular-gridster.min.js"></script>
     <script src="assets/angular-long-press/dist/angular-long-press.min.js"></script>
+    <script src="assets/requirejs/require.js"></script>
     <script src="dashboard.js"></script>
 </head>
 <body ng-controller="dashboardController">
