--- a/app_client/index.html
+++ b/app_client/index.html
@@ -5,12 +5,14 @@
   <base href="/">
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
 </head>
 <body ng-view>
 
 
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
+  <script src="lib/angular-gridster/dist/angular-gridster.min.js"></script>
   <script src="app.min.js"></script>
 
 </body>
