--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body ng-view>
 
