refactor index.html

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html ng-app="nerveCenter">
+
 <head>
-  <title>MEAN stack authentication example</title>
+  <title>NerveCenter</title>
   <base href="/">
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body ng-view>
-
-
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
   <script src="lib/angular-gridster/dist/angular-gridster.min.js"></script>
   <script src="app.min.js"></script>
-
 </body>
+
 </html>
