fix db widget default value

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,4 +1,7 @@
 <!-- <button on-long-press="onLongPress(console.log('DO IT!'))" on-touch-end="onTouchEnd()" prevent-click="true"></button> -->
+
+{{ navvm.currentUser.widgets }}
+
 <div gridster="gridOptions">
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
