--- a/app_client/index.html
+++ b/app_client/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body ng-view on-long-press="onLongPress(console.log('DO IT!'))"  long-press-duration="2000" on-touch-end="onTouchEnd()" prevent-click="true">
+<body ng-view on-long-press="$ctrl.onLongPress()" long-press-duration="2000">
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
   <script src="lib/angular/angular-sanitize.min.js"></script>
