--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,6 +1,10 @@
+<h1>
+  {{this.widgetList}}
+</h1>
+
 <div gridster="gridOptions">
   <ul>
-    <li gridster-item="item" ng-repeat="widget in widgets">
+    <li gridster-item="item" ng-repeat="widget in this.widgets">
       <a href={{widget.url}}> 
         <img src={{widget.icon}} alt="widget" style="width:100%;height:100%">
     </li>
@@ -14,7 +18,7 @@
   <div class="modal-body" id="modal-body">
     <ul>
       <li ng-repeat="item in $ctrl.items">
-        <a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>
+        <a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item=item">{{ item }}</a>
       </li>
     </ul>
     Selected: <b>{{ $ctrl.selected.item }}</b>
