--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,10 +1,7 @@
-<h1>
-  {{this.widgetList}}
-</h1>
-
+<button ng-click="saveWidgets()">Click me!</button>
 <div gridster="gridOptions">
   <ul>
-    <li gridster-item="item" ng-repeat="widget in this.widgets">
+    <li gridster-item="item" ng-repeat="widget in widgets">
       <a href={{widget.url}}> 
         <img src={{widget.icon}} alt="widget" style="width:100%;height:100%">
     </li>
@@ -13,13 +10,15 @@
 
 <script type="text/ng-template" id="myModalContent.html">
   <div class="modal-header">
-    <h3 class="modal-title" id="modal-title">Im a modal!</h3>
+    <h3 class="modal-title" id="modal-title">Add a Widget</h3>
   </div>
-  <div class="modal-body" id="modal-body">
-    Selected: <b>{{ $ctrl.selected.item }}</b>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
-    <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
+  <div class="modal-body">
+<form ng-submit="saveWidget()" ng-controller="dashboardCtrl">
+  URL: <input type="text" ng-model="widgetUrl" name="widgetUrl" /><br />
+  ICN: <input type="text" ng-model="widgetIcon" name="widgetIcon" /><br />
+  ROW: <input type="number" ng-model="widgetRow" name="widgetRow" /><br />
+  COL: <input type="number" ng-model="widgetCol" name="widgetCol" /><br />
+  <input type="submit" id="submit" value="Submit" />
+</form>
   </div>
 <script>
