--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,74 +1,24 @@
 <button ng-click="saveWidgets()">Click me!</button>
-<button ng-click="toggleDrag()">Click me!</button>
 <div gridster="gridOptions">
   <ul>
-    <li gridster-item="item" row="{{widget.row}}" col="{{widget.col}}" ng-repeat="widget in widgets">
-      <ng-click ng-click="logIt(widget.url);"> 
-        <img id="widgetIcon" src={{widget.icon}}>
-        <img id="x-delete" ng-show="deleteEnabled" ng-click="deleteWidget(widget)" src=img/xDelete.png">
-      </ng-click>
+    <li gridster-item="item" ng-repeat="widget in widgets">
+      <a href={{widget.url}}> 
+        <img src={{widget.icon}} alt="widget" style="width:100%;height:100%">
     </li>
   </ul>
 </div>
 
-<script type="text/ng-template" id="mainModal.html">
-<div ng-hide="hideMainModal">
+<script type="text/ng-template" id="myModalContent.html">
   <div class="modal-header">
-        <div class="modal-header-div">
-          Rearrange 
-        </div>
-        <div class="modal-header-div">
-          Export 
-        </div>
-        <button type="button" class="btn btn-info" ng-click="openLoginModal()">Import</button>
-        <button type="button" class="btn btn-info" ng-click="deleteEnabled=true;">delete</button>
-        <div class="modal-header-div">
-          Sign Out
-        </div>
-      </div>
-      <div class="modal-body">
-      <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
-        <div class="row modal-form-icon-container" style="padding-bottom:10px;">
-        <div class="col-xs-6 modal-body-form">
-          <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="URL" /><br />
-          <input type="number" ng-model="widgetRow" name="widgetRow" placeholder="Row" /><br />
-          <input type="number" ng-model="widgetCol" name="widgetCol" placeholder="Column" /><br />
-          <input type="submit" class="btn btn-info" value="Add Widget" />
-        </div>
-        <div class="col-xs-6 selected-icon-container">
-            <img src={{selectedIcon}} class="selected-icon">
-        </div>
-        </div>
-        <div class="gridster-modal" gridster="gridsterModalOptions">
-          <ul>
-            <li gridster-item="item" ng-repeat="icon in allIcons">
-              <ng-click ng-click="selectIcon(icon.icon);"> 
-                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"
-                </ng-click>
-            </li>
-          </ul>
-        </div>
-      </form>
-    </div>
-</div>
-</script>
-
-<script type="text/ng-template" id="loginModal.html">
-<div class="modal-header"
-      <button type="button" class="btn btn-info" ng-click="register()">Register</button>
-      </div>
-    </div>
-    <div class="modal-body">
-      <form ng-submit="$reg.onSubmit()">
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$reg.credentials.email">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$reg.credentials.password">
-        </div>
-        <button type="submit" class="btn btn-default">Sign in!</button>
-      </form>
+    <h3 class="modal-title" id="modal-title">Add a Widget</h3>
   </div>
-</script>
+  <div class="modal-body">
+    <form ng-submit="saveWidget()" ng-controller="dashboardCtrl">
+      URL: <input type="text" ng-model="widgetUrl" name="widgetUrl" /><br />
+      ICN: <input type="text" ng-model="widgetIcon" name="widgetIcon" /><br />
+      ROW: <input type="number" ng-model="widgetRow" name="widgetRow" /><br />
+      COL: <input type="number" ng-model="widgetCol" name="widgetCol" /><br />
+      <input type="submit" id="submit" value="Submit" />
+    </form>
+  </div>
+<script>
