--- a/app_client/index.html
+++ b/app_client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
+  <link rel="stylesheet" href="/lib/image-picker/image-picker/image-picker.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -20,6 +21,8 @@
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="lib/angular-long-press/dist/angular-long-press.min.js"></script>
+  <script src="lib/jquery/jquery-3.2.0.min.js"></script>
+  <script src="lib/image-picker/image-picker/image-picker.js"></script>
   <script src="app.min.js"></script>
 </body>
 
