--- a/app_client/index.html
+++ b/app_client/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
-  <link rel="stylesheet" type="text/css" href="lib/msdropdown/dd.css" />
+  <link rel="stylesheet" type="text/css" href="lib/ms-Dropdown/css/msdropdown/dd.css" />
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -21,8 +21,9 @@
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="lib/angular-long-press/dist/angular-long-press.min.js"></script>
+  <!-- <script src="lib/ms-Dropdown/js/jquery/jquery-1.9.0.min.js" type="text/javascript"></script> -->
   <script src="lib/jquery/jquery-3.2.0.min.js"></script>
-  <script src="lib/ms-Dropdown/js/jquery.dd.js" type="text/javascript"></script>
+  <script src="lib/ms-Dropdown/js/msdropdown/jquery.dd.min.js" type="text/javascript"></script>
   <script src="app.min.js"></script>
 </body>
 
