abandon image dropdown idea

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -21,6 +21,7 @@
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="lib/angular-long-press/dist/angular-long-press.min.js"></script>
+  <script src="lib/pg-ng-dropdown/dest/js/pg-ng-dropdown.min.js"></script>
   <!-- <script src="lib/ms-Dropdown/js/jquery/jquery-1.9.0.min.js" type="text/javascript"></script> -->
   <script src="lib/jquery/jquery-3.2.0.min.js"></script>
   <script src="lib/ms-Dropdown/js/msdropdown/jquery.dd.min.js" type="text/javascript"></script>
