--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -2,16 +2,31 @@
 <!--   <option ng-repeat="icon in icons" value="{{icon.name}}" title="img/{{icon.img}}.png"></option> -->
 <!-- </select> -->
 
-<select ng-model="selectedCar">
-  <option ng-repeat="x in icons">{{x.name}}</option>
-</select>
+<!-- <select ng-model="selectedCar"> -->
+<!--   <option ng-repeat="x in icons">{{x.name}}</option> -->
+<!-- </select> -->
+
+<div data-pg-ng-dropdown data-options="myOptionsArray"></div>
+
+<div data-pg-ng-dropdown data-value-property="text" data-model="myModel" data-options="myOptionsArray"></div>
+<!-- <input type="text" value="" id="trace"/> -->
+<!-- <div id="image-dropdown" > -->
+<!--   <input checked="checked" type="radio" id="line1" name="line-style" value="1"  /><label for="line1"></label> -->
+<!--   <input type="radio" id="line2" name="line-style" value="2"  /><label for="line2"></label> -->
+<!--   <input type="radio" id="line3" name="line-style" value="3"  /><label for="line3"></label> -->
+<!--   <input type="radio" id="line4" name="line-style" value="4"  /><label for="line4"></label> -->
+<!--   <input type="radio" id="line5" name="line-style" value="5"  /><label for="line5"></label> -->
+<!--   <input type="radio" id="line6" name="line-style" value="6"  /><label for="line6"></label> -->
+<!--   <input type="radio" id="line7" name="line-style" value="7"  /><label for="line7"></label> -->
+<!-- </div> -->
 
 <button ng-click="saveWidgets()">Click me!</button>
 <div gridster="gridOptions">
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
-      <a href={{widget.url}}> 
+      <ng-click ng-click="logIt(widget.url);"> 
         <img src={{widget.icon}} alt="widget" style="width:100%;height:100%">
+        </ng-click>
     </li>
   </ul>
 </div>
@@ -26,6 +41,16 @@
       ICN: <input type="text" ng-model="widgetIcon" name="widgetIcon" /><br />
       ROW: <input type="number" ng-model="widgetRow" name="widgetRow" /><br />
       COL: <input type="number" ng-model="widgetCol" name="widgetCol" /><br />
+
+<div gridster="gridOptions">
+  <ul>
+    <li gridster-item="item" ng-repeat="widget in widgets">
+      <ng-click ng-click="logIt(widget.url);"> 
+        <img src={{widget.icon}} alt="widget" style="width:100%;height:100%">
+        </ng-click>
+    </li>
+  </ul>
+</div>
       <input type="submit" id="submit" value="Submit" />
     </form>
   </div>
