--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -15,17 +15,26 @@
   </div>
   <div class="modal-body">
     <form ng-submit="saveWidget()" ng-controller="dashboardCtrl">
+    <div class="row">
+    <div class="col-xs-6">
       URL: <input type="text" ng-model="widgetUrl" name="widgetUrl" /><br />
       ICN: <input type="text" ng-model="widgetIcon" name="widgetIcon" /><br />
       ROW: <input type="number" ng-model="widgetRow" name="widgetRow" /><br />
       COL: <input type="number" ng-model="widgetCol" name="widgetCol" /><br />
 
-        <img src={{selectedIcon}} alt="widget" style="width:100%;height:100%">
+    </div>
+    <div class="col-xs-6">
+    <h2 style="text-align:center">
+      Icon
+    </h2>
+        <img src={{selectedIcon}} alt="widget" style="width:60%;height:60%">
+    </div>
+    </div>
 <div gridster="gridOptions">
   <ul>
     <li gridster-item="item" ng-repeat="icon in allIcons">
       <ng-click ng-click="selectIcon(icon.icon);"> 
-        <img src={{icon.icon}} alt="widget" style="width:100%;height:100%">
+        <img src={{icon.icon}} alt="widget" style="width:50%;height:100%">
         </ng-click>
     </li>
   </ul>
