--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,44 +1,169 @@
-<button ng-click="saveWidgets()">Click me!</button>
-<div gridster="gridOptions">
+<ng-click ng-click="deleteEnabled = !deleteEnabled"> 
+  <img id="deleteIcon" src="img/_x.png"
+                       height="25px"
+                       width="25px"
+                                     style="margin-right:6px;margin-top:5px;">
+  <img id="deleteIconRed" src="img/_xRed.png"
+                          height="25px"
+                          width="25px"
+                          ng-show="deleteEnabled"
+                                        style="margin-right:6px;margin-top:5px;">
+</ng-click>
+
+<ng-click ng-click="gridOptions.draggable.enabled = !gridOptions.draggable.enabled">
+  <img id="lockIcon" src="img/_locked.png"
+                     height="25px"
+                     width="25px"
+                                   style="margin-right:13px;margin-top:5px;">
+  <img id="lockIconRed" src="img/_lockedRed.png"
+                        height="25px"
+                        width="25px"
+                        ng-show="gridOptions.draggable.enabled"
+                                                   style="margin-right:13px;margin-top:5px;">
+</ng-click>
+
+<ng-click ng-click="openMainModal()"> 
+  <img id="openMainModal" src="img/_options.png"
+                          height="25px" width="25px"
+                                        style="margin-right:21px;margin-top:6px;">
+</ng-click>
+
+<div style="height:12px;width:100%;"></div>
+
+<div gridster="gridOptions" style="padding-top:40px;">
   <ul>
-    <li gridster-item="item" ng-repeat="widget in widgets">
-      <ng-click ng-click="logIt(widget.url);"> 
-        <img src={{widget.icon}} alt="widget" style="width:100%;height:100%">
-        </ng-click>
+    <li gridster-item 
+     ng-repeat="widget in widgets track by $index"
+     row="widget.row"
+     col="widget.col"
+     url="widget.url">
+      <ng-click ng-click="logIt(gridsterItem);"> 
+        <img id="widgetIcon" src={{widget.icon}}>
+        <img id="x-delete" ng-show="deleteEnabled" 
+                           ng-click="deleteWidget(widget)"
+                           style="opacity:0.75;"
+                           height="30px"
+                           width="30px"
+                           src="img/_xDelete.png">
+      </ng-click>
     </li>
   </ul>
 </div>
 
-<script type="text/ng-template" id="myModalContent.html">
-<div class="modal-header">
-    <h3 class="modal-title" id="modal-title">Add a Widget</h3>
-  </div>
-  <div class="modal-body">
-    <form ng-submit="saveWidget()" ng-controller="dashboardCtrl">
-    <div class="row">
-    <div class="col-xs-6">
-      URL: <input type="text" ng-model="widgetUrl" name="widgetUrl" /><br />
-      ICN: <input type="text" ng-model="widgetIcon" name="widgetIcon" /><br />
-      ROW: <input type="number" ng-model="widgetRow" name="widgetRow" /><br />
-      COL: <input type="number" ng-model="widgetCol" name="widgetCol" /><br />
-      <input type="submit" id="submit" value="Submit" />
+<script type="text/ng-template" id="mainModal.html">
+<uib-tabset class="main-modal" active="active" style="overflow:scroll;background-color:black;height:80vh;">
+    <uib-tab class="main-modal-tab" heading="Add Widget">
+      <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
+        <div class="row modal-form-icon-container">
+          <div class="col-xs-6 modal-body-form">
+            <input type="text" ng-model="widgetUrl"
+                               name="widgetUrl"
+                               placeholder="Paste URL"
+                               onfocus="this.placeholder = ''"
+                                  style="color:black;text-align:center;" />
+            <br />
+            <input type="submit" class="btn btn-info"
+                                 value="Add Widget" />
+          </div>
+          <div class="col-xs-6 selected-icon-container">
+            <img src={{selectedIcon}} class="selected-icon">
+          </div>
+        </div>
+        <div class="gridster-modal" gridster="gridsterModalOptions">
+          <ul>
+            <li gridster-item="item" ng-repeat="icon in allIcons">
+              <ng-click ng-click="selectIcon(icon.icon);"> 
+                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"
+              </ng-click>
+            </li>
+          </ul>
+        </div>
+      </form>
+    </uib-tab>
+
+    <uib-tab heading="Export" style="height:100%">
+    <div ng-controller="dashboardCtrl" style="height:100%">
+      <div select-text style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
+        {{widgets}}
+      </div>
+      <h4 style="text-align:center;">
+        Copy the text above and paste it someplace safe!
+      </h4>
     </div>
-    <div class="col-xs-6">
-    <h2>
-      Icon
-    </h2>
-        <img src={{selectedIcon}} alt="widget" style="width:60%;height:60%">
-    </div>
-    </div>
-<div gridster="gridOptions">
-  <ul>
-    <li gridster-item="item" ng-repeat="icon in allIcons">
-      <ng-click ng-click="selectIcon(icon.icon);"> 
-        <img src={{icon.icon}} alt="widget" style="width:50%;height:100%">
-        </ng-click>
-    </li>
-  </ul>
-</div>
-    </form>
-  </div>
-<script>
+    </uib-tab>
+
+    <uib-tab class="main-modal-tab" heading="Import" style="height:100%;">
+      <div ng-controller="dashboardCtrl">
+        <div style="height:100%;">
+          <textarea ng-model="widgetString"
+                    placeholder="Paste the text you exported here..."
+                    style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
+          </textarea>
+        </div>
+          <div style="text-align:center">
+            <button ng-click="importWidgets()" class="btn btn-danger" style="width:40%">
+              Import
+            </button>
+          </div>
+      </div>
+    </uib-tab>
+
+    <uib-tab heading="Logout" style="text-align:center;">
+      <h3 style="text-align:center;margin-bottom:25px;">You Sure?</h3>
+      <div style="text-align:center" ng-controller="dashboardCtrl">
+        <button type="button" id="logout-button"
+                              class="btn btn-danger"
+                              ng-click="onLogout()">
+          Logout
+        </button>
+      </div>
+    </uib-tab>
+  </uib-tabset>
+</script>
+
+<script type="text/ng-template" id="authModal.html">
+<uib-tabset class="main-modal" active="active" style="overflow:scroll;background-color:black;height:80vh;">
+    <uib-tab heading="Login">
+      <form ng-submit="$auth.onLogin()" class="main-modal-tab">
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" id="email"
+                              class="form-control"
+                              ng-model="$auth.credentials.email"
+                              placeholder="Enter email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password"
+                                 class="form-control"
+                                 ng-model="$auth.credentials.password"
+                                 placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-default">
+          Login
+        </button>
+      </form>
+    </uib-tab>
+
+    <uib-tab heading="Register">
+      <form ng-submit="$auth.onReg()">
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" id="email"
+                              class="form-control"
+                              ng-model="$auth.credentials.email"
+                              placeholder="Enter email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password"
+                                 class="form-control"
+                                 ng-model="$auth.credentials.password"
+                                 placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-default">
+          Register
+        </button>
+      </form>
+    </uib-tab>
+</script>
