--- a/app_client/index.html
+++ b/app_client/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html ng-app="nerveCenter">
 
-  <head>
-    <title>NerveCenter</title>
-    <base href="/">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
-    <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
-    <link rel="stylesheet" href="/dashboard/dashboard.view.css">
-  </head>
+<head>
+  <title>NerveCenter</title>
+  <base href="/">
+  <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
+  <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
+  <link rel="stylesheet" type="text/css" href="lib/ms-Dropdown/css/msdropdown/dd.css" />
+  <link rel="stylesheet" href="/css/style.css">
+</head>
 
-  <body ng-view>
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular/angular-route.min.js"></script>
-    <script src="lib/angular/angular-sanitize.min.js"></script>
-    <script src="lib/angular/angular-animate.min.js"></script>
-    <script src="lib/angular-gridster/dist/angular-gridster.min.js"></script>
-    <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
-    <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-    <script src="app.min.js"></script>
-  </body>
+<body ng-view on-long-press="$ctrl.onLongPress()" long-press-duration="2000">
+  <script src="lib/angular/angular.min.js"></script>
+  <script src="lib/angular/angular-route.min.js"></script>
+  <script src="lib/angular/angular-sanitize.min.js"></script>
+  <script src="lib/angular/angular-animate.min.js"></script>
+  <script src="lib/angular-gridster/dist/angular-gridster.min.js"></script>
+  <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+  <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+  <script src="lib/angular-long-press/dist/angular-long-press.min.js"></script>
+  <script src="app.min.js"></script>
+</body>
 
 </html>
 
