--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -26,11 +26,11 @@
         <img src={{selectedIcon}} alt="widget" style="width:60%;height:60%;">
     </div>
     </div>
-<div gridster="gridOptions">
+<div gridster="gridsterModalOptions">
   <ul>
     <li gridster-item="item" ng-repeat="icon in allIcons">
       <ng-click ng-click="selectIcon(icon.icon);"> 
-        <img src={{icon.icon}} alt="widget" style="width:50%;height:100%">
+        <img src={{icon.icon}} alt="widget" style="width:100%;height:100%">
         </ng-click>
     </li>
   </ul>
