--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -56,14 +56,14 @@
       </div>
     </div>
     <div class="modal-body" style="background-color: #231f20">
-      <form ng-submit="vm.onSubmit()">
+      <form ng-submit="$reg.onSubmit()">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$reg.credentials.email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$reg.credentials.password">
         </div>
         <button type="submit" class="btn btn-default">Sign in!</button>
       </form>
