--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -23,13 +23,13 @@
       </div>
     </div>
     <div class="modal-body" style="background-color: #231f20">
-    <form ng-submit="saveWidgets()" ng-controller="dashboardCtrl">
+    <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
       <div class="row" style="padding-bottom:10px;">
       <div class="col-xs-6" style="display:flex;flex-direction:column;justify-content:space-between;">
         <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="URL" /><br />
         <input type="number" ng-model="widgetRow" name="widgetRow" placeholder="Row" /><br />
         <input type="number" ng-model="widgetCol" name="widgetCol" placeholder="Column" /><br />
-        <input type="submit" class="btn btn-info" value="Add Widget" ng-click="createWidget()" />
+        <input type="submit" class="btn btn-info" value="Add Widget" />
       </div>
       <div class="col-xs-6" style="text-align:center;">
           <img src={{selectedIcon}} alt="widget" style="width:60%;height:60%;">
