--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -16,15 +16,13 @@
     <li gridster-item="item" ng-repeat="widget in widgets">
       <ng-click ng-click="logIt(widget.url);"> 
         <img id="png1" src={{widget.icon}} style="width:100%;height:100%;">
-        <img ng-show="deleteEnabled" id="png2" src=img/X_Delete.png style="width:100%;height:100%;">/
-        <!-- <img id="png1" src="http://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" /> -->
-        <!-- <img id="png2" src="http://upload.wikimedia.org/wikipedia/commons/5/5c/Torchlight_help.png" /> -->
+        <img ng-show="deleteEnabled" ng-click="deleteWidget(widget)" id="png2" src=img/X_Delete.png style="width:100%;height:100%;">/
       </ng-click>
     </li>
   </ul>
 </div>
 
-<scriid="png1"pt type="text/ng-template" id="mainModal.html">
+<script="png1"pt type="text/ng-template" id="mainModal.html">
 <div class="modal-header" style="background-color:#231f20;color:white;display:flex;flex-direction:row;">
       <div style="width:25%;text-align:center;">
         Rearrange 
@@ -62,7 +60,6 @@
     </form>
   </div>
 </script>
-
 
 <script type="text/ng-template" id="loginModal.html">
 <div class="modal-header" style="background-color:#231f20;color:white;text-align:right;">
