--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -16,7 +16,7 @@
     <li gridster-item="item" ng-repeat="widget in widgets">
       <ng-click ng-click="logIt(widget.url);"> 
         <img id="png1" src={{widget.icon}} style="width:100%;height:100%;">
-        <img ng-show="deleteEnabled" ng-click="deleteWidget(widget)" id="png2" src=img/X_Delete.png style="width:100%;height:100%;">/
+        <img ng-show="deleteEnabled" ng-click="deleteWidget(widget)" id="png2" src=img/X_Delete.png style="width:100%;height:100%;">
       </ng-click>
     </li>
   </ul>
