--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,22 +1,27 @@
 <style>
-  #png1 {
+  #widgetIcon {
       position:absolute;
       z-index:0;
+      height:100%;
+      width:100%;
   }
   
-  #png2 {
+  #x_Delete {
       position:absolute;
       z-index:1;
+      height:100%;
+      width:100%;
   }
 </style>
 
 <button ng-click="saveWidgets()">Click me!</button>
+<button ng-click="deleteEnabled=true">Click me!</button>
 <div gridster="gridOptions">
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
       <ng-click ng-click="logIt(widget.url);"> 
-        <img id="png1" src={{widget.icon}} style="width:100%;height:100%;">
-        <img ng-show="deleteEnabled" ng-click="deleteWidget(widget)" id="png2" src=img/X_Delete.png style="width:100%;height:100%;">
+        <img id="widgetIcon" src={{widget.icon}}>
+        <img id="x_Delete" ng-show="deleteEnabled" ng-click="deleteWidget(widget)" src=img/X_Delete.png">
       </ng-click>
     </li>
   </ul>
@@ -32,7 +37,7 @@
           Export 
         </div>
         <button type="button" class="btn btn-info" ng-click="openLoginModal()">Import</button>
-        <button type="button" class="btn btn-info" ng-click="closeModal()">delete</button>
+        <button type="button" class="btn btn-info" ng-click="deleteEnabled=true;">delete</button>
         <div style="width:25%;text-align:center;">
           Sign Out
         </div>
