finish project css restructuring

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
   <link rel="stylesheet" type="text/css" href="lib/ms-Dropdown/css/msdropdown/dd.css" />
   <link rel="stylesheet" href="/dashboard/dashboard.view.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
-<body ng-view on-long-press="$ctrl.onLongPress()" long-press-duration="2000">
+<body ng-view on-long-press="$ctrl.onLongPress()" long-press-duration="500">
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
   <script src="lib/angular/angular-sanitize.min.js"></script>
