add enableDrag function

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 
-<body ng-view on-long-press="$ctrl.onLongPress()" long-press-duration="500">
+<body ng-view>
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
   <script src="lib/angular/angular-sanitize.min.js"></script>
