switch to toggleDrag

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,5 +1,5 @@
 <button ng-click="saveWidgets()">Click me!</button>
-<button ng-click="enableDrag()">Click me!</button>
+<button ng-click="toggleDrag()">Click me!</button>
 <div gridster="gridOptions">
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
