add ngStorage dependency

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,5 +1,6 @@
-<button ng-click="saveWidgets()">Click me!</button>
-<button ng-click="toggleDrag()">Click me!</button>
+<button ng-click="toggleDrag()">Rearrange</button>
+<button ng-click="openMainModal()">Modal</button>
+<button ng-click="openMainModal()">Sign In</button>
 <div gridster="gridOptions">
   <ul>
     <li gridster-item="item" ng-repeat="widget in widgets">
