--- a/app_client/index.html
+++ b/app_client/index.html
@@ -22,6 +22,7 @@
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="lib/angular-long-press/dist/angular-long-press.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
   <script src="app.min.js"></script>
 </body>
 
